# Reinforcement-Learning

./: .gitignore  CLAUDE.md  ch01_introduction.py  ch02_value_based_rl.py  ch03_policy_based_rl.py  ch04_model_based_rl.py  ch05_multi_agent_rl.py  ch06_llms_and_rl.py  ch07_other_topics.py  pyproject.toml
notebooks/: ch01_introduction.ipynb  ch02_value_based_rl.ipynb  ch03_policy_based_rl.ipynb  ch04_model_based_rl.ipynb  ch05_multi_agent_rl.ipynb  ch06_llms_and_rl.ipynb  ch07_other_topics.ipynb
