[project]
name = "reinforcement-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gymnasium>=1.3.0",
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.9",
    "nbformat>=5.10.4",
    "numpy>=2.4.6",
    "scipy>=1.17.1",
    "torch>=2.12.0",
]
